got cmake setup to work with sqlite3

--- a/src/hemlock-core/CMakeLists.txt
+++ b/src/hemlock-core/CMakeLists.txt
@@ -2,18 +2,19 @@
 # <https://github.com/SoftFauna/HEMLOCK.git>
 # Copyright (c) 2024 The SoftFauna Team
 
-configure_file(config.h.in config.h)
-
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 find_package(SQLite3 REQUIRED)
+
+configure_file(config.h.in config.h)
 
 add_executable(hemlock
         "main.c")
-target_compile_features(hemlock c_std_11)
-target_include_directories(hemlock
+target_compile_features(hemlock PUBLIC c_std_11)
+target_include_directories(hemlock PUBLIC
         "${CMAKE_CURRENT_BINARY_DIR}"
         "${CMAKE_CURRENT_SOURCE_DIR}"
-        "${SQLite3_INCLUDE_DIRS}")
+        "${SQLITE3_INCLUDE_DIRS}")
 target_link_libraries(hemlock
-        "${SQLite3_LIBRARIES}")
+        "${SQLITE3_LIBRARIES}")
 
 # end of file
