refactored console arguements, implemented arg parser

--- a/src/hemlock-core/CMakeLists.txt
+++ b/src/hemlock-core/CMakeLists.txt
@@ -7,24 +7,26 @@ find_package(SQLite3 REQUIRED)
 
 configure_file(config.h.in config.h)
 
-add_executable(hemlock
+add_executable(hemlock-core
         "main.c"
+        "arguement.c"
         "mode.c"
+        "insert.c"
         "string_utils.c"
         "database_core.c"
         "database.c")
-target_compile_features(hemlock PRIVATE c_std_11)
-target_include_directories(hemlock PRIVATE
+target_compile_features(hemlock-core PRIVATE c_std_11)
+target_include_directories(hemlock-core PRIVATE
         "${CMAKE_CURRENT_BINARY_DIR}"
         "${CMAKE_CURRENT_SOURCE_DIR}"
         "${SQLITE3_INCLUDE_DIRS}")
-target_link_libraries(hemlock
+target_link_libraries(hemlock-core
         "${SQLITE3_LIBRARIES}")
 
 if(MSVC)
-        target_compile_options(hemlock PRIVATE /Wall /Qspectre)
+        target_compile_options(hemlock-core PRIVATE /W4)
 else()
-        target_compile_options(hemlock PRIVATE -Wall -Wextra -Wpedantic)
+        target_compile_options(hemlock-core PRIVATE -Wall -Wextra -Wpedantic)
 endif()
 
 # end of file
