--- a/src/hemlock-core/CMakeLists.txt
+++ b/src/hemlock-core/CMakeLists.txt
@@ -2,6 +2,8 @@
 # <https://github.com/SoftFauna/HEMLOCK.git>
 # Copyright (c) 2024 The SoftFauna Team
 
+
+project("hemlock-core" VERSION 0.1.0.0 LANGUAGES C)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 find_package(SQLite3 REQUIRED)
 
