unified some arg names/orders and added some mode template stuff

--- a/src/hemlock-core/CMakeLists.txt
+++ b/src/hemlock-core/CMakeLists.txt
@@ -13,7 +13,10 @@ add_executable(hemlock-core
         "main.c"
         "arguement.c"
         "mode.c"
+        "mode_template.c"
+        "settings.c"
         "insert.c"
+        "remove.c"
         "string_utils.c"
         "database_core.c"
         "database.c")
